Fix z-indexes for modals

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -23,14 +23,14 @@
 }
 
 .progress_icons{
-    z-index: 10000;
+    z-index: 1040;
     position: absolute;
     top: 0;
     left: 0;
 }
 
 .home #fixed-versus{
-    z-index: 99999;
+    z-index: 1041;
 }
 
 .hidden{
